--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
 
 .pixel{
     background-color: white;
-    padding: 40px;
+    width: 40px;
+    height: 40px;
     border: 1px solid black;
     display: inline-block
 }
