--- a/style.css
+++ b/style.css
@@ -1,17 +1,42 @@
-
+h1{
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 5px;
+    font-size: 50px;
+}
 
 #chosePaleteColor{
-    display:flex
+    display:flex;
+    left:40%;
+}
+#blackInput, #pallete2Input, #pallete3Input, #pallete4Input, #clear-board, #generate-board{
+    margin-left:20px;
+    margin-bottom: 20px;
+    box-shadow: 5px 3px 3px black;
+    padding: 10px;
+    border-radius:5px;
+    font-size:15px;
 }
 
 #defineMatriz{
     display: flex;
+    margin-top:20px;
+}
+
+#color-palette{
+    
+
+    left:40%
 }
 
 .color{
     border: 1px  solid black;
     display: inline-block;
     margin-top: 20px;
+    margin-left:20px;
+    border-radius:5px;
+    box-shadow: 5px 3px 3px black;
+
 }
 
 #black{
@@ -36,6 +61,27 @@
     width: 40px;
     height: 40px;
     border: 1px solid black;
-    display: inline-block
+    display: inline-block;
+    margin-left:10px;
+    padding: 10px;
+    box-shadow: 3px 2px 2px black;
 }
 
+#clear-board{
+    margin:20px 30px
+
+}
+
+#board-size{
+    width:200px;
+    height: 20px;
+
+    border-radius:3px;
+    box-shadow: 3px 2px 2px black;
+    padding:10px;
+    font-size:18px;
+}
+
+#clear-input{
+    display: flex;
+}
