--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
+body{
+    justify-content: center;
+}
 h1{
     text-align: center;
     font-family: 'Bebas Neue', cursive;
     letter-spacing: 5px;
     font-size: 50px;
+    background-color: rgb(212, 212, 212);
+    padding:15px;
+
 }
 
-#chosePaleteColor{
+#chosePaleteColor, #color-palette,  #generate-board, #defineMatriz, #pixel{
     display:flex;
-    left:40%;
+    justify-content: center
+    
 }
 #blackInput, #pallete2Input, #pallete3Input, #pallete4Input, #clear-board, #generate-board{
     margin-left:20px;
@@ -19,15 +26,10 @@ h1{
 }
 
 #defineMatriz{
-    display: flex;
     margin-top:20px;
+
 }
 
-#color-palette{
-    
-
-    left:40%
-}
 
 .color{
     border: 1px  solid black;
@@ -43,16 +45,7 @@ h1{
     background-color: black;
     padding:30px;
 }
-#palette2{
-    background-color: blue;
-    padding:30px;
-}
-#palette3{
-    background-color: yellow;
-    padding:30px;
-}
-#palette4{
-    background-color: green;
+#palette2, #palette3, #palette4{
     padding:30px;
 }
 
@@ -68,14 +61,13 @@ h1{
 }
 
 #clear-board{
-    margin:20px 30px
-
+    margin:20px 30px;
+    justify-content: center;
 }
 
 #board-size{
     width:200px;
     height: 20px;
-
     border-radius:3px;
     box-shadow: 3px 2px 2px black;
     padding:10px;
@@ -84,4 +76,5 @@ h1{
 
 #clear-input{
     display: flex;
+    justify-content: center;
 }
